--- a/less/_responsive.module.less
+++ b/less/_responsive.module.less
@@ -3,7 +3,7 @@
 // ****************************************************************************
 
 // Masonry cols widths - initial
-.disp_posts, .disp_mediaidx {
+.disp_posts, .disp_mediaidx, .disp_catdir {
 	.grid .grid-item {
 		&.two-cols {
 			width: 50%;
@@ -49,7 +49,7 @@
 }
 	
 @media (min-width: 1200px) {
-	.disp_posts {
+	.disp_posts, .disp_mediaidx, .disp_catdir {
 		.grid .grid-item {
 			&.three-cols {
 				width: 33.333%;
@@ -101,7 +101,7 @@
 	}
 	
 	// Masonry responsive layout
-	.disp_posts, .disp_mediaidx {
+	.disp_posts, .disp_mediaidx, .disp_catdir {
 		.grid .grid-item {
 			&.two-cols {
 				width: 50%;
@@ -135,7 +135,7 @@
 	}
 	
 	// Masonry responsive layout
-	.disp_posts, .disp_mediaidx {
+	.disp_posts, .disp_mediaidx, .disp_catdir {
 		.grid .grid-item {
 			&.two-cols {
 				width: 100%;
