--- a/style.css
+++ b/style.css
@@ -1757,6 +1757,22 @@ div.widget_core_coll_page_list.evo_1pic__special ul li .item_first_image_placeho
 div.widget_core_coll_related_post_list.evo_1pic__special ul li .item_first_image_placeholder:before {
   margin-top: 27px;
 }
+div.widget_core_coll_item_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title,
+div.widget_core_coll_featured_posts.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title,
+div.widget_core_coll_post_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title,
+div.widget_core_coll_page_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title,
+div.widget_core_coll_related_post_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title {
+  font-weight: 700;
+  line-height: 1.5em;
+  margin: 10px 0 5px;
+}
+div.widget_core_coll_item_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title a,
+div.widget_core_coll_featured_posts.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title a,
+div.widget_core_coll_post_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title a,
+div.widget_core_coll_page_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title a,
+div.widget_core_coll_related_post_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.item_title a {
+  font-size: 16px;
+}
 div.widget_core_coll_media_index.evo_layout_rwd .widget_rwd_content {
   margin: 14px 0;
 }
@@ -1992,6 +2008,23 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   font-weight: 700;
   padding: 10px 0;
 }
+.disp_catdir .grid {
+  text-align: center;
+}
+.disp_catdir .grid .grid-item {
+  padding: 15px;
+  float: left;
+}
+.disp_catdir .grid .grid-item img {
+  max-width: 100%;
+  max-height: 500px;
+  height: auto;
+}
+.disp_catdir .grid .grid-item a {
+  font-size: 14px;
+  font-weight: 700;
+  padding: 10px 0;
+}
 .disp_404 h2,
 .disp_postidx h2,
 .disp_catdir main h2 {
@@ -2136,11 +2169,13 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   padding: 12px 15px;
 }
 .disp_posts .grid .grid-item.two-cols,
-.disp_mediaidx .grid .grid-item.two-cols {
+.disp_mediaidx .grid .grid-item.two-cols,
+.disp_catdir .grid .grid-item.two-cols {
   width: 50%;
 }
 .disp_posts .grid .grid-item.three-cols,
-.disp_mediaidx .grid .grid-item.three-cols {
+.disp_mediaidx .grid .grid-item.three-cols,
+.disp_catdir .grid .grid-item.three-cols {
   width: 33.333%;
 }
 @media (min-width: 768px) {
@@ -2169,7 +2204,9 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
   }
 }
 @media (min-width: 1200px) {
-  .disp_posts .grid .grid-item.three-cols {
+  .disp_posts .grid .grid-item.three-cols,
+  .disp_mediaidx .grid .grid-item.three-cols,
+  .disp_catdir .grid .grid-item.three-cols {
     width: 33.333%;
   }
 }
@@ -2206,11 +2243,13 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
     font-size: 18px;
   }
   .disp_posts .grid .grid-item.two-cols,
-  .disp_mediaidx .grid .grid-item.two-cols {
+  .disp_mediaidx .grid .grid-item.two-cols,
+  .disp_catdir .grid .grid-item.two-cols {
     width: 50%;
   }
   .disp_posts .grid .grid-item.three-cols,
-  .disp_mediaidx .grid .grid-item.three-cols {
+  .disp_mediaidx .grid .grid-item.three-cols,
+  .disp_catdir .grid .grid-item.three-cols {
     width: 50%;
   }
   .evo_cover_image {
@@ -2225,11 +2264,13 @@ body.disp_arcdir div.arcdir_list_wrapper ul li span.dimmed:before {
     height: auto !important;
   }
   .disp_posts .grid .grid-item.two-cols,
-  .disp_mediaidx .grid .grid-item.two-cols {
+  .disp_mediaidx .grid .grid-item.two-cols,
+  .disp_catdir .grid .grid-item.two-cols {
     width: 100%;
   }
   .disp_posts .grid .grid-item.three-cols,
-  .disp_mediaidx .grid .grid-item.three-cols {
+  .disp_mediaidx .grid .grid-item.three-cols,
+  .disp_catdir .grid .grid-item.three-cols {
     width: 100%;
   }
   .disp_mediaidx .mediaidx-item--wrapper .mediaidx-item {
