--- a/style.less
+++ b/style.less
@@ -1521,6 +1521,10 @@ div.widget_core_coll_item_list.evo_1pic__special.evo_noexcerpt.evo_noteaser div.
 @import "../../rsc/less/_user_avatars_widget.module.less";
 // --------------------------------------------------------
 
+// -----------------About Author widget -------------------
+@import "../../rsc/less/_about_author_widget.module.less";
+// --------------------------------------------------------
+
 // ------------- Organization Members widget -------------
 @import "../../rsc/less/_org_members_widget.module.less";
 	// Override constants used in the module:
